<resources>
    <string name="app_name">mova</string>
    <string name="onboarding_title">Welcome to Mova</string>
    <string name="onboarding_subtitle">The best movie streaming app of the century to make your days great!</string>
    <string name="button_get_started">Get Started</string>
    <string name="button_sign_in_with_password">Sign in with password</string>
    <string name="lets_you_in">Let\'s you in</string>
    <string name="button_continue_with_facebook">Continue with Facebook</string>
    <string name="button_continue_with_google">Continue with Google</string>
    <string name="button_continue_with_apple">Continue with Apple</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="select_auth_method_image_description">Auth method image</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="social_button">social_button</string>
    <string name="or">or</string>
    <string name="google_icon">Google icon</string>
    <string name="apple_icon">Apple icon</string>
    <string name="app_logo">App logo</string>
    <string name="sign_in_create_your_account">Create Your Account</string>
    <string name="sign_in_or_continue_with">or continue with</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_remember_me">Remember me</string>
    <string name="social_login_button">Social login button</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_field_icon">Email field icon</string>
    <string name="remember_me">Remember me</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_list">My List</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>
    <string name="home_page_banner_title">Dr. Strange 2</string>
    <string name="home_page_banner_text">Action, Superhero, Science Fiction, ...</string>
    <string name="play">Play</string>
    <string name="top_10_movies_this_week">Top 10 Movies This Week</string>
    <string name="see_all">See all</string>
    <string name="_9_8">9.8</string>
    <string name="search_button">Search button</string>
    <string name="notification_button">Notification button</string>
    <string name="new_releases">New Releases</string>
    <string name="title">Title</string>
    <string name="notifications">Notifications</string>
    <string name="play_button">Play button</string>
    <string name="dummy_movie_name">Movie Name</string>
    <string name="dummy_date">Date</string>
    <string name="dummy_episode_number">Episode number</string>
    <string name="dummy_tag">Tag</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_searches">Top Searches</string>
    <string name="not_found">Not Found</string>
    <string name="not_found_description">Sorry, the keyword you entered could not be found. Try to check again or search with other keywords.</string>
    <string name="_404_not_found_image">404 Not found image</string>
    <string name="sort_and_filter"><![CDATA[Sort & Filter]]></string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="movie">Movie</string>
    <string name="tv_shows">TV Shows</string>
    <string name="k_drama">K-Drama</string>
    <string name="anime">Anime</string>
    <string name="regions">Regions</string>
    <string name="all_regions">All Regions</string>
    <string name="us">US</string>
    <string name="south_korea">South Korea</string>
    <string name="genre">Genre</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="thriller">Thriller</string>
    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="latest_release">Latest Release</string>
    <string name="_2022">2022</string>
    <string name="avatar_the_way_of_water">Avatar: The Way of Water</string>
    <string name="rating_icon">Rating icon</string>
    <string name="_13">13+</string>
    <string name="united_states">United States</string>
    <string name="subtitle">Subtitle</string>
    <string name="dummy_genre">Genre: Action, Superhero, Science Fiction, Romance, Thriller, …</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat…</string>
    <string name="dummy_director">James\nCameron</string>
    <string name="director">Director</string>
    <string name="trailers">Trailers</string>
    <string name="more_like_this">More Like This</string>
    <string name="comments">Comments</string>
</resources>