<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    android:padding="24sp"
    android:background="@drawable/onboarding_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        style="@style/h2_bold"
        android:textColor="@color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_subtitle"
        style="@style/body_xlarge_medium"
        android:textColor="@color/white"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_get_started"
        style="@style/primary_button_rounded" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

</LinearLayout>